Salesforce Project/force-app/main/default/objects/Cattle__c/Cattle__c.object-meta.xml
<CustomObject>
    <description>Track each cow/buffalo and its details.</description>
    <label>Cattle</label>
    <nameField>
        <label>Cattle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cattles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>