Salesforce Project/force-app/main/default/objects/Cattle__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Status of the cattle.</description>
    <inlineHelpText>Status of the cattle</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>