Salesforce Project/force-app/main/default/objects/Cattle__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <label>Breed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jersey</fullName>
            </value>
            <value>
                <fullName>Holstein</fullName>
            </value>
            <value>
                <fullName>Murrah</fullName>
            </value>
            <value>
                <fullName>Ongole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>