Salesforce Project/force-app/main/default/objects/Cattle__c/fields/Cattle_ID__c.field-meta.xml
<CustomField>
    <fullName>Cattle_ID__c</fullName>
    <displayFormat>CD-{0000}</displayFormat>
    <label>Cattle ID</label>
    <type>AutoNumber</type>
</CustomField>