Salesforce Project/force-app/main/default/objects/Cattle__c/fields/Farm_Account__c.field-meta.xml
<CustomField>
    <fullName>Farm_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Farm_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cattles</relationshipLabel>
    <relationshipName>Cattles</relationshipName>
    <type>Lookup</type>
</CustomField>