Salesforce Project/force-app/main/default/objects/Cattle__c/fields/Farmer__c.field-meta.xml
<CustomField>
    <fullName>Farmer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the cattle to its owner</description>
    <label>Farmer</label>
    <referenceTo>Farmer__c</referenceTo>
    <relationshipLabel>Cattles</relationshipLabel>
    <relationshipName>Cattles</relationshipName>
    <type>Lookup</type>
</CustomField>