Salesforce Project/force-app/main/default/objects/Cattle__c/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <description>Status of Cattle</description>
    <label>Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Under Treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>