Salesforce Project/force-app/main/default/objects/Cattle__c/fields/Milk_Production_Record__c.field-meta.xml
<CustomField>
    <fullName>Milk_Production_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays milk entries for this cattle</description>
    <label>Milk Production Record</label>
    <referenceTo>Milk_Production__c</referenceTo>
    <relationshipLabel>Cattles</relationshipLabel>
    <relationshipName>Cattles</relationshipName>
    <type>Lookup</type>
</CustomField>