Salesforce Project/force-app/main/default/objects/Cattle__c/fields/Milk_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Milk_Quantity__c</fullName>
    <label>Milk Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>