Salesforce Project/force-app/main/default/objects/Cattle__c/validationRules/Date_of_Birth.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth</fullName>
    <active>true</active>
    <description>Date of Birth of the cattle.</description>
    <errorConditionFormula>Date_of_Birth__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be in the future.</errorMessage>
</ValidationRule>