Salesforce Project/force-app/main/default/objects/Cattle__c/validationRules/Health_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Health_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c  = TRUE, ISBLANK(Text(Health_Status__c)))</errorConditionFormula>
    <errorDisplayField>Health_Status__c</errorDisplayField>
    <errorMessage>Health Status is required for active cattle.</errorMessage>
</ValidationRule>